git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/SDB/trunk@1121151 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,8 +8,10 @@ Documentation:
 
 ==== SDB v1.3
 
++ Upgraded to Jena 2.6.0 and ARQ 2.7.0 
+  Older versions of these jars will not work.
 + Added improvement for Oracle to avoid blob handling over JDBC for lexical forms <= 2000.
-  Thansk to Metatomix (Scott Kagels) for the patches. 
+  Thanks to Metatomix (Scott Kagels) for the patches. 
 
 ==== SDB v1.2
 
