git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1121182 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,8 @@ ChangeLog for TDB
 
 ==== 0.8.0
 
-+ Upgrade to Java5 version of ARQ.
++ Upgrade to Java5 version of ARQ and Jena
++ Cope with spaces in URIs (not recommended)
 
 ==== 0.7.3
 
