Jars: Removed:  xml-apis.jar, junit.jar / Added: junit-4.5.jar
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113769 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -11,6 +11,8 @@ Release Notes
 Jar changes:
    o Removed antlr-2.7.5.jar (no longer used)
    o Removed concurrent.jar (no longer used)
+   o Removed xml-apis.jar (no longer used)
+   o junit.jar upgraded to junit-4.5.jar
 
 Deprecation clearance.
    Methods, classes and statics marked deprecated in previous releases have been largely removed.
