git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121240 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -20,6 +20,9 @@ ChangeLog for ARQ
 
 + Uses the Java5 version of Jena2. 
 
++ Property function afp:versionARQ does not now split version numbers into major and minor parts
+  ARQ has a 3-part version number now.
+
 ==== ARQ 2.6
 
 + Added .close() to Dataset and GraphStore for those implementations that
