git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121241 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,8 @@ ChangeLog for ARQ
 
 ==== ARQ 2.7
 
++ New build system.
+
 + Clearing up.
     junit used is now v4.5
     internal logging API is SLF4J (Jena uses Apache Commons Logging)
