Changes to listing and testing individuals, to account for edge cases (specifically: when a user has materialised entailments from an inference model into a plain model, which is a recommended design pattern). Also unified the implementations of OntResource.isIndividual() and OntModel.listIndividuals(), at the possible risk of some slowdown in listIndividuals on DB-backed models
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113785 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -6,7 +6,7 @@ Release Notes
 
 ** Codebase converted to Java 5
 
-   o Exceptions AlreadyExistsException, DoesNotExistException and 
+   o Exceptions AlreadyExistsException, DoesNotExistException and
      RulesetNotFoundException no longer inherit via RDFRDBException
 
 Jar changes:
@@ -53,6 +53,9 @@ Ontology API:
    o Removed support for no-longer-supported OWL syntax checker.
    o Removed previously-deprecated namespace management methods from OntDocumentManager.
      Namespaces should be managed via the PrefixMapping API.
+   o Unified code for checking individuals in OntResource.isIndividual() and
+     OntModel.listIndividuals(), and updated the check to account for some user-reported
+     edge cases.
 
 ==== Jena 2.5.7
 
