--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -6,6 +6,8 @@ Release Notes
 
 ** Codebase converted to Java 5
 
+   o Convert to use SLF4J for logging facade 
+
    o Exceptions AlreadyExistsException, DoesNotExistException and
      RulesetNotFoundException no longer inherit via RDFRDBException
 
@@ -13,6 +15,8 @@ Jar changes:
    o Removed antlr-2.7.5.jar (no longer used)
    o Removed concurrent.jar (no longer used)
    o Removed xml-apis.jar (no longer used)
+   o Removed commons-logging-1.1.1.jar
+   o Add slf4j-api-1.5.6.jar, slf4j-log4j12.jar 
    o junit.jar upgraded to junit-4.5.jar
 
 Deprecation clearance.
