git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1121359 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ ChangeLog for TDB
 + Upgrade to Java5 version of ARQ and Jena
 + Copes with spaces in URIs (strongly not recommended)
 + Internal general purpose library code all moved under package "atlas"
++ Faster Turtle reader (combined unpinning with N-Triples bulkreader).  
 
 ==== 0.7.3
 
