Added a getTypeByClass call to TypeMapper and registered additional primitive types based on suggestion and patch supplied by Thorsten Moeller.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113791 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -60,7 +60,11 @@ Ontology API:
    o Unified code for checking individuals in OntResource.isIndividual() and
      OntModel.listIndividuals(), and updated the check to account for some user-reported
      edge cases.
-
+     
+Datatypes:
+   o Added a getTypeByClass call to TypeMapper and registered additional primitive types
+     based on suggestion and patch supplied by Thorsten Moeller. 
+     
 ==== Jena 2.5.7
 
 Database layer:
