--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,7 +5,7 @@ ChangeLog for TDB
 
 + Upgrade to Java5 version of ARQ and Jena
 + Copes with spaces in URIs (strongly not recommended)
-+ Internal general purpose library code all moved under package "atlas"
++ Internal general purpose (non-RDF) library code all moved under package "atlas"
 + Faster Turtle reader (combined unpinning with N-Triples bulkreader).  
 
 ==== 0.7.3
