git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1121448 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,10 +3,14 @@ ChangeLog for TDB
 
 ==== 0.8.0
 
+** The on-disk file format has changed : datasets must be reloaded **
+
+
++ A named graph of <urn:x-arq:UnionGraph  urn:x-arq:DefaultGraph
 + Upgrade to Java5 version of ARQ and Jena
 + Copes with spaces in URIs (strongly not recommended)
 + Internal general purpose (non-RDF) library code all moved under package "atlas"
-+ Faster Turtle reader (combined unpinning with N-Triples bulkreader).  
++ Faster Turtle reader (combined underpinning with N-Triples bulkreader).  
 
 ==== 0.7.3
 
