--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -16,7 +16,8 @@ Documentation:
 
 + Upgraded to Jena 2.6.0 and ARQ 2.7.0 
     Older versions of these jars will not work.
-    antlr-2.7.5.jar and concurrent.jar removed, looging no wslf4j
+    antlr-2.7.5.jar and concurrent.jar removed, logging now slf4j
+    
 + Added improvement for Oracle to avoid blob handling over JDBC for lexical forms <= 2000.
   Thanks to Metatomix (Scott Kagels) for the patches. 
 
