sdbdelete and sdbload --replace added
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/SDB/trunk@1121682 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,7 @@ Documentation:
 ==== SDB v1.4 (pre)
 
 + Added StoreUtils.isFormatted(Store)
++ Added sdbdelete and sdbload --replace option
 
 ==== SDB v1.3
 
