Writing "N3" now casues proper Turtle to be written.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113903 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -4,6 +4,7 @@ Release Notes
 
 ==== Jena 2.6.2
 
++ N3 pretty writer now write Turtle (no use of "=" for owl:sameAs) 
 
 + Maven-style codebase layout.
 
