git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121849 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,8 @@ ChangeLog for ARQ
 
 ==== ARQ 2.8.1
 
++ Speed up processing of nested optionals.
+
 + Some JMX management exposed: Object names start "com.hp.hpl.jena.sparql". 
   Details include: system and version information, query execution count, 
     last query and the time execution started. 
