--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,8 @@ Documentation:
 
 ==== SDB v1.4 (pre)
 
++ Changed the index structure for the quad table to improve converage.
+  Migration: drop all secondary indexes and reindex.
 + Added StoreUtils.isFormatted(Store)
 + Added sdbdelete and sdbload --replace option
 
