Fixed but in conversion of Calendar with 0 ms to XSDDateTime
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113920 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -20,7 +20,8 @@ Reasoners:
      Graph level.
 
 Core API:
-   o Fixed bug in comparison of dateTimes with fractional seconds
+   o Fixed bug in comparison of dateTimes with fractional seconds and with 
+     round-tripping from calendars
         
 ARQ: removed from Jena development
   The following jars have been removed from the lib/ directory - they are only used by ARQ:
