git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1122044 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,8 +4,10 @@ ChangeLog for ARQ
 ==== ARQ 2.8.1
 
 + Bug fixes
-   + substiution in NOT EXISTS
+   + substitution in NOT EXISTS
+   + substitution in assignment
    + constant folding and logical special forms
+   + bad lock allocation (only occurs under very high load)  
 
 + Speed up processing of nested optionals.  Greatly speeds up BSBM with TDB.
 
