Fixed handling of unbound pattern match groups to return null string instead of barf
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113937 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -24,6 +24,7 @@ Reasoners:
    o Generalized rule reasoner to permit triples in subject position at
      Graph level. Returned InfGraph and deductions graphs are safe but
      getRawGraph on deductions graph will return generalized graph.
+   o Fixed handling of unbound groups in regex.
 
 Core API:
    o Fixed bug in comparison of dateTimes with fractional seconds and with 
