--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,10 @@
 ChangeLog for ARQ
 =================
 
+==== ARQ 2.8.2
+
++ SPARQL v1.1 as an defined language and parser, separate from ARQ 
+
 ==== ARQ 2.8.1
 
 + Bug fixes
