git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1122190 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ ChangeLog for ARQ
 ==== ARQ 2.8.2
 
 + SPARQL v1.1 as an defined language and parser, separate from ARQ 
++ Results output in CSV
 
 ==== ARQ 2.8.1
 
