git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122204 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,11 @@
 ChangeLog for TDB
 =================
 
+==== 0.8.4
+
++ Experimental: filtering of quads (to support dynamic datasets and graph masking).
++ Incldue src-examples in sources shipped.  
+
 ==== 0.8.3
 
 + Concurrency fixes
