git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122233 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,8 +3,10 @@ ChangeLog for TDB
 
 ==== 0.8.4
 
-+ Experimental: filtering of quads (to support dynamic datasets and graph masking).
-+ Incldue src-examples in sources shipped.  
++ Experimental: filtering of quads (to support dynamic datasets and graph masking at some time).
++ Include src-examples in sources shipped.
++ Bug fix: Turtle and N-triples reader could use the blank nod elbal as given, 
+  not treat as a per run scoped label.    
 
 ==== 0.8.3
 
