git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122293 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ ChangeLog for TDB
 =================
 
 ==== 0.8.5
++ Fix XML of the POM file.
 + Add a shutdown hook to sync datasets (don't rely on it!)
 + Adding checking for concurrenct modification situations.
   TDB supports multiple readers OR single writer.
