git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122335 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,7 +4,7 @@ ChangeLog for TDB
 ==== 0.8.5
 
 + Dynamic datasets : use the dataset description in a query (FROM/FROM NAMED) to 
-  restrict the behaviour of the queyr execution to just those graphs.
+  restrict the behaviour of the query execution to just those graphs.
     Default graph can be the set union of several graphs (use multiple FROM)
     Multiple named graphs (multiple FROM NAMED) restricts visibility of named graphs.
     
