GAE compatibility hook
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113960 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,6 +1,9 @@
 Release Notes
 =============
 
+Misc:
+   o Added JenaParameter.enableGAEcompatibility to switch AnonID generation 
+     version compatible with Google App Engine.
 
 ==== Jena 2.6.2
 
