Better solution to GAE compatibility
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113961 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -2,8 +2,7 @@ Release Notes
 =============
 
 Misc:
-   o Added JenaParameter.enableGAEcompatibility to switch AnonID generation 
-     version compatible with Google App Engine.
+   o Patched AnonId using UID when running in environments like GAE
 
 ==== Jena 2.6.2
 
