git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122349 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,7 +15,11 @@ ChangeLog for TDB
     
     See wiki for details.
     http://openjena.org/wiki/TDB/Datasets#Dynamic_Datasets
-    
+
++ Can now set TDB context symbols via Java's system properties 
+  (-D when invoking Java).
+  e.g. -Dtdb:logExec=true to enable log query execution 
+       (in conjucntion with the logging level). 
 + Fix XML of the POM file.
 + Add a shutdown hook to sync datasets (don't rely on it!)
 + Adding checking for concurrent modification situations.
