git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1122429 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,8 @@ ChangeLog for ARQ
 
 ==== ARQ 2.8.3
 
-+ Bug fix: some multiplely nested OPTIONALs could result in only naive, unoptimized execution. 
++ Bug fix: some multiply nested OPTIONALs could result in only naive, unoptimized execution. 
++ Bug fix: SERVICE body for complex query patterns. 
 
 ==== ARQ 2.8.2
 
